# smpc-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
benches/: basic.rs
crates/smpc-core/: Cargo.toml
crates/smpc-core/src/: error.rs  ids.rs  lib.rs  ring.rs  secret.rs  traits.rs
crates/smpc-net/: Cargo.toml
crates/smpc-net/src/: frame.rs  lib.rs  memory.rs  tls.rs
crates/smpc-protocols/: Cargo.toml
crates/smpc-protocols/src/: lib.rs
crates/smpc-testing/: Cargo.toml
crates/smpc-testing/src/: lib.rs
docs/: threat-model.md
docs/protocols/: rep3-u64.md
examples/: simulator.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame_decode.rs
src/: lib.rs
tests/: tcp_rustls.rs
tests/fixtures/: p0-ca.crt  p0.crt  p0.key  p1-ca.crt  p1.crt  p1.key  p2-ca.crt  p2.crt  p2.key
