[package]
name = "smpc-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transports and frame codec for smpc-rs."

[dependencies]
async-trait.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
smpc-core = { path = "../smpc-core" }
tokio.workspace = true
tokio-rustls.workspace = true
